# QDAGView3

./: README.md  TODO.md  pyproject.toml
examples/expression_flow/: expression_delegate.py  expression_inspector.py  expression_model.py  expression_parser.py  expression_widgets.py  main.py
examples/treemodel/: main.py
qdagview3/: evaluate_python.py
qdagview3/delegates/: abstract_graph_delegate.py  tree_graph_delegate.py
qdagview3/models/: link_model.py  nodes_inlets_outlets_model.py  nodes_ports_model.py  nodes_tree_model.py  socket_based_nodes_model.py  standard_nodes_model.py  tree_based_nodes_model.py
qdagview3/utils/: graphutils.py  qtutils.py  unique.py
qdagview3/views/: graph_view.py
qdagview3/views/delegates/: abstract_graph_delegate.py  tree_graph_delegate.py
qdagview3/views/utils/: geo.py  linking_tool.py  payload.py  qt.py  widget_manager_using_bidict.py  widget_manager_using_persistent_index.py
qdagview3/views/widgets/: cell_widget.py  fitting_line_edit.py  link_widget.py  node_widget.py  port_widget.py  row_widget.py
tests/: test_expression_model.py  test_link_model.py  test_parse_expressions.py
