[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QDAGView3"
version = "0.1.0"
authors = [
    { name = "András Zalavári", email = "zalavariandris@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "qtpy",
    "pyqt6", # Todo: can we move to pyside6?
    "networkx",
    "bidict"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["qdagview3", "qdagview3.*"]
namespaces = false

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*", ".venv_/*"]

